--- a/mainpageapp/templates/mainpageapp/mainpage.html
+++ b/mainpageapp/templates/mainpageapp/mainpage.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>안녕하세요!!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<div>
+    <h1>Mainpage</h1>
+
+    <h5>producer button, consumer button</h5>
+</div>
+
+{% endblock %}
