--- a/mainpageapp/templates/mainpageapp/mainpage.html
+++ b/mainpageapp/templates/mainpageapp/mainpage.html
@@ -2,8 +2,11 @@
 
 {% block content %}
 
-<div>
+<div style="text-align:center;">
     <h1>Mainpage</h1>
+    <br>
+    <br>
+    <br>
 
     <h5>producer button, consumer button</h5>
 </div>
