--- a/producerapp/templates/producerapp/producer.html
+++ b/producerapp/templates/producerapp/producer.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div>
-    <h1>producer</h1>
+<div style="text-align:center;">
+    <h1>producer Form</h1>
 
-    <form action="{% url 'producerapp:play' %}" method="post">
+    <br>
+    <br>
+    <br>
+
+    <form action="{% url 'producerapp:play' %}" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
     </form>
