--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,10 @@
  <div>
-   <div>
+   <div style="text-align:center;">
     <span>공지사항</span> |
     <span>제휴문의</span> |
     <span>서비스 소개</span>
    </div>
-   <div style="margin-top: 1rem;">
-     <h6>Pragmatic</h6>
+   <div style="margin-top: 1rem;text-align:center;">
+     <h6>recommend play</h6>
    </div>
  </div>
