--- a/templates/header.html
+++ b/templates/header.html
@@ -1,12 +1,15 @@
 <div>
-    <div>
+    <div style="text-align:center;">
         <h1>recommend play</h1>
     </div>
 
-    <div>
+    <div style="text-align:center;">
         <a href="{% url 'mainpageapp:mainpage' %}">
             Main
         </a>
 
+        <a href="{% url 'producerapp:play' %}">
+            producer
+        </a>
     </div>
 </div>
