--- a/producerapp/templates/producerapp/producer.html
+++ b/producerapp/templates/producerapp/producer.html
@@ -1,15 +1,14 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
+
 {% block content %}
-
-<div style="text-align:center;">
-    <h1>producer Form</h1>
-
-    <br>
-    <br>
-    <br>
-
+<div style="text-align:center;max-width: 500px;margin:4rem auto">
+    <div>
+        <h4>Producer Form</h4>
+    </div>
     <form action="{% url 'producerapp:play' %}" method="post" enctype="multipart/form-data">
-      {% csrf_token %}
+        {% csrf_token %}
+        {% bootstrap_form form %}
       <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
     </form>
 </div>
