--- a/templates/header.html
+++ b/templates/header.html
@@ -4,12 +4,28 @@
     </div>
 
     <div style="text-align:center;">
+        <a href="{% url 'selectpage:selectpage' %}">
+            Select
+        </a>
+
         <a href="{% url 'mainpageapp:mainpage' %}">
             Main
         </a>
 
-        <a href="{% url 'producerapp:play' %}">
-            producer
+        <a href="{% url 'accountapp:create' %}">
+            Signup
         </a>
+        {% if not user.is_authenticated %}
+        <a href="{% url 'accountapp:login' %}?next{{ request.path }}">
+            Login
+        </a>
+        {% else %}
+        <a href="{% url 'accountapp:detail'  pk=user.pk %}">
+            <span>MyPage</span>
+        </a>
+        <a href="{% url 'accountapp:logout' %}?next={{ request.path }}">
+            <span>Logout</span>
+        </a>
+        {% endif %}
     </div>
 </div>
