profile page revise

--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
 
 
@@ -17,12 +16,24 @@
                     </a>
                     {% endif %}
             </h2>
+            <br>
+            <br>
+            <h3>본 영화</h3>
+
+            <div>
+                <h4>title : {{target_user.profile.play1_title}}  &nbsp&nbsp&nbsp  rate : {{target_user.profile.play1_rate}}/9</h4>
+                <h4>title : {{target_user.profile.play2_title}}  &nbsp&nbsp&nbsp  rate : {{target_user.profile.play2_rate}}/9</h4>
+                <h4>title : {{target_user.profile.play3_title}}  &nbsp&nbsp&nbsp  rate : {{target_user.profile.play3_rate}}/9</h4>
+            </div>
+
+            <br>
+            <br>
 
             {% else %}
                 {% if target_user == user %}
                 <a href="{% url 'profileapp:create' %}">
                     <h2>
-                        Create Profile
+                        영화 기록하기
                     </h2>
                 </a>
                 {% else %}
