--- a/templates/snippets/card_article.html
+++ b/templates/snippets/card_article.html
@@ -1,12 +1,13 @@
-<div style="display:block;text-align:center;">
+<div style="display:block;padding:1rem;">
   <img src="{{ play.image.url }}" alt="">
-  <h3>
+  <h5>
     title : {{ play.title }}
-  </h3>
-  <h5>
+  </h5>
+  <h7>
     genre : {{ play.genre }}
-  </h5>
-  <h5>
+  </h7>
+  <br>
+  <h7>
     location : {{ play.location }}
-  </h5>
+  </h7>
 </div>
