--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -21,9 +21,9 @@
             <h3>본 영화</h3>
 
             <div>
-                <h4>title : {{target_user.profile.play1_title}}  &nbsp&nbsp&nbsp  rate : {{target_user.profile.play1_rate}}/9</h4>
-                <h4>title : {{target_user.profile.play2_title}}  &nbsp&nbsp&nbsp  rate : {{target_user.profile.play2_rate}}/9</h4>
-                <h4>title : {{target_user.profile.play3_title}}  &nbsp&nbsp&nbsp  rate : {{target_user.profile.play3_rate}}/9</h4>
+                <h4>title : {{target_user.profile.play1_title}}  &nbsp&nbsp&nbsp  rate : {{target_user.profile.play1_rate}}</h4>
+                <h4>title : {{target_user.profile.play2_title}}  &nbsp&nbsp&nbsp  rate : {{target_user.profile.play2_rate}}</h4>
+                <h4>title : {{target_user.profile.play3_title}}  &nbsp&nbsp&nbsp  rate : {{target_user.profile.play3_rate}}</h4>
             </div>
 
             <br>
