--- a/templates/header.html
+++ b/templates/header.html
@@ -7,11 +7,11 @@
         <a href="{% url 'selectpage:selectpage' %}">
             Select
         </a>
-
-        <a href="{% url 'mainpageapp:mainpage' %}">
+        {% if user.is_authenticated %}
+        <a href="{% url 'accountapp:mainpage' pk=user.pk%}">
             Main
         </a>
-
+        {% endif %}
         <a href="{% url 'accountapp:create' %}">
             Signup
         </a>
