--- a/templates/snippets/card_article.html
+++ b/templates/snippets/card_article.html
@@ -4,10 +4,16 @@
     title : {{ play.title }}
   </h5>
   <h7>
-    genre : {{ play.genre }}
+    genre : {{ play.genres }}
   </h7>
   <br>
   <h7>
-    location : {{ play.location }}
+    area : {{ play.area }}
+  </h7>
+  <h7>
+    rate: {{ play.rate }}
+  </h7>
+  <h7>
+    vote : {{ play.vote }}
   </h7>
 </div>
