--- a/selectpage/templates/selectpage/selectpage.html
+++ b/selectpage/templates/selectpage/selectpage.html
@@ -1,4 +1,3 @@
-
 {% include 'head.html' %}
 
 <div style="text-align:center;">
@@ -6,10 +5,10 @@
 
 
     <div class="text-center my-5">
-        <a style="margin:1rem;" href="{% url 'producerapp:play' %}"
-          class="btn btn-dark rounded-pill material-icons">
-          brush
-        </a>
+        <button class="btn btn-dark rounded-pill material-icons">
+            brush
+        </button>
+
         {% if not user.is_authenticated %}
         <a style="margin:1rem;" href="{% url 'accountapp:login' %}"
           class="btn btn-dark rounded-pill material-icons">
@@ -25,3 +24,4 @@
     </div>
 
 </div>
+
