--- a/templates/header.html
+++ b/templates/header.html
@@ -1,29 +1,33 @@
-<div>
-    <div style="text-align:center;">
-        <h1>recommend play</h1>
-    </div>
+<div class="v11_2">
 
     <div style="text-align:center;">
-        <a href="{% url 'selectpage:selectpage' %}">
+        <span class="v1_6">STA<span style="color:#FFEF31;">G</span>E</span>
+        <br>
+        <span class="v1_7">공연예술통합플랫폼</span>
+    </div>
+
+    <div style="text-align:center;padding:2rem;font-size:20px;">
+        <a href="{% url 'selectpage:selectpage' %}" class="header_nav">
             Select
         </a>
         {% if user.is_authenticated %}
-        <a href="{% url 'accountapp:mainpage' pk=user.pk%}">
+        <a href="{% url 'accountapp:mainpage' pk=user.pk%}"class="header_nav">
             Main
         </a>
         {% endif %}
-        <a href="{% url 'accountapp:create' %}">
-            Signup
-        </a>
+
         {% if not user.is_authenticated %}
-        <a href="{% url 'accountapp:login' %}?next{{ request.path }}">
+        <a href="{% url 'accountapp:login' %}?next{{ request.path }}" class="header_nav"">
             Login
         </a>
+        <a href="{% url 'accountapp:create' %}"class="header_nav">
+            Signup
+        </a>
         {% else %}
-        <a href="{% url 'accountapp:detail'  pk=user.pk %}">
+        <a href="{% url 'accountapp:detail'  pk=user.pk %}"class="header_nav">
             <span>MyPage</span>
         </a>
-        <a href="{% url 'accountapp:logout' %}?next={{ request.path }}">
+        <a href="{% url 'accountapp:logout' %}?next={{ request.path }}" class="header_nav">
             <span>Logout</span>
         </a>
         {% endif %}
