--- a/selectpage/templates/selectpage/selectpage.html
+++ b/selectpage/templates/selectpage/selectpage.html
@@ -1,22 +1,41 @@
-{% include 'head.html' %}
 
-<div style="text-align:center;">
-    <h1>Selectpage</h1>
+<!DOCTYPE html>
+<html lang="ko">
+<html>
+{% load static %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-with, initial-scale=1, shrink-to-fit=no">
+    <title>STAGE</title>
 
+    <!-- BOOTSTRAP LINK -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- DEFAULT CSS LINK -->
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
+
+    <!-- MATERIAL ICONS LINK    -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet">
+</head>
+
+<body style="background-color :black;">
+    <div style="text-align:center;">
 
     <div class="text-center my-5">
-        <button class="btn btn-dark rounded-pill material-icons">
+        <button class="btn btn-dark  material-icons">
             brush
         </button>
 
         {% if not user.is_authenticated %}
         <a style="margin:1rem;" href="{% url 'accountapp:login' %}"
-          class="btn btn-dark rounded-pill material-icons">
+          class="btn btn-dark  material-icons">
           search
         </a>
         {% else %}
         <a style="margin:1rem;" href="{% url 'accountapp:mainpage' pk=user.pk %}"
-          class="btn btn-dark rounded-pill material-icons">
+          class="btn btn-dark  material-icons">
           search
         </a>
         {% endif %}
@@ -24,4 +43,7 @@
     </div>
 
 </div>
+</body>
 
+
+</html>
