--- a/templates/head.html
+++ b/templates/head.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-with, initial-scale=1, shrink-to-fit=no">
-    <title>recommend play</title>
+    <title>STAGE</title>
 
     <!-- BOOTSTRAP LINK -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
