--- a/templates/header.html
+++ b/templates/header.html
@@ -17,7 +17,7 @@
         {% endif %}
 
         {% if not user.is_authenticated %}
-        <a href="{% url 'accountapp:login' %}?next{{ request.path }}" class="header_nav"">
+        <a href="{% url 'accountapp:login' %}" class="header_nav">
             Login
         </a>
         <a href="{% url 'accountapp:create' %}"class="header_nav">
@@ -27,7 +27,7 @@
         <a href="{% url 'accountapp:detail'  pk=user.pk %}"class="header_nav">
             <span>MyPage</span>
         </a>
-        <a href="{% url 'accountapp:logout' %}?next={{ request.path }}" class="header_nav">
+        <a href="{% url 'accountapp:logout' %}" class="header_nav">
             <span>Logout</span>
         </a>
         {% endif %}
